Fix the spacing between header and close button

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,7 +21,7 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex; /* not sure about this, try taking it out later */
-  padding: 15px;
+  padding: 15px; 
 }
 
 .icon {
@@ -36,18 +36,18 @@ body {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-
- /* padding auto does nothing */
 }
 
 .container {
   display: flex;
   flex-direction: column;
+  /* justify-content: space-around; */
 }
 
 .header {
   display:flex;
   font-weight: bold;
+  justify-content: space-between;
 }
 
 .continue-cancel {
